update to.room socketio & create database + API create a user

--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 PORT = 8686
+DB_HOST = mongodb+srv://realtime:no1theword@realtime.uymr41i.mongodb.net/
+DB_USER = realtime
+DB_PASSWORD = no1theword
+DB_NAME = version_latest
