--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "date-format": "^4.0.14",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "mongodb": "^6.6.1",
+    "mongoose": "^8.3.4",
     "nodemon": "^3.1.0",
     "socket.io": "^4.7.5"
   }
