--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "realtime_latest",
+  "name": "chat_realtime",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,12 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "date-format": "^4.0.14",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "mongodb": "^6.6.1",
-    "mongoose": "^8.3.4",
-    "nodemon": "^3.1.0",
-    "socket.io": "^4.7.5"
+    "date-format": "4.0.14",
+    "dotenv": "16.4.5",
+    "express": "4.19.2",
+    "mongodb": "6.6.1",
+    "mongoose": "8.3.4",
+    "nodemon": "3.1.0",
+    "socket.io": "4.7.5"
   }
 }
